tests/ui/malformed_argument.stderr
error: unexpected token
 --> tests/ui/malformed_argument.rs:1:23
  |
1 | #[displaystr::display(docs)]
  |                       ^^^^
