tests/ui/malformed_argument.rs
#[displaystr::display(docs)]
enum UnitVariant {
    A = "unit variant",
}

fn main() {}
